src/golden/cards/templates/nested/errors/test.golden/topCannotHaveChain.fl
	card NoTopChain
		template top <- (String x)